--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-
 <body>
-    <h1>Academia Xavier</h1>
-    
+        <h1> Xavier Academy</h1>
+        <img src="logo.png" alt="logo">
+      <h2> Ver todos os <a href="cursos.htm">Cursos</a></h2>
+
+
 </body>
+
 </html>
