--- a/cursos/ADS-1/EngSoftware/index.htm
+++ b/cursos/ADS-1/EngSoftware/index.htm
@@ -6,10 +6,10 @@
     <title>Engenharia de software</title>
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="C:\Users\DevOps\Desktop\LMS\cursos\ADS-1\mai.css" />
     <script src="main.js"></script>
 </head>
-<body bgcolor="white">
+<body>
     <h2><em><u>Engenharia de Software: </u></em></h2>
     <ul>
  
