--- a/cursos/ADS-1/LP2/index.htm
+++ b/cursos/ADS-1/LP2/index.htm
@@ -6,7 +6,7 @@
     <title>Linguagem de Programação</title>
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="C:\Users\DevOps\Desktop\LMS\cursos\ADS-1\mai.css" />
     <script src="main.js"></script>
 </head>
 <body bgcolor="white">
